--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     compile 'net.serenity-bdd:serenity-screenplay-webdriver:' + SERENITY_VERSION
     compile 'net.serenity-bdd:browse-the-web:1.1.34'
     testCompile 'net.serenity-bdd:serenity-junit:' + SERENITY_VERSION
+    testCompile 'io.rest-assured:rest-assured:3.0.3'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testCompile 'junit:junit:4.12'
+    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '0.3.6'
 }
 
 test {
