--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 repositories {
+    mavenCentral()
     mavenLocal()
     jcenter()
 }
 
 buildscript {
     repositories {
+        mavenCentral()
         mavenLocal()
         jcenter()
     }
@@ -23,16 +25,19 @@ dependencies {
     def SERENITY_VERSION = "1.2.1-rc.5"
 
     testCompile 'net.serenity-bdd:serenity-core:' + SERENITY_VERSION
-    testCompile 'net.serenity-bdd:serenity-rest-assured:' + SERENITY_VERSION
     testCompile 'net.serenity-bdd:serenity-cucumber:1.1.13'
     testCompile 'org.assertj:assertj-core:3.1.0'
     testCompile 'org.slf4j:slf4j-simple:1.7.12'
     testCompile 'com.googlecode.lambdaj:lambdaj:2.3.3'
     testCompile 'io.codearte.jfairy:jfairy:0.5.3'
     compile 'net.serenity-bdd:serenity-screenplay:' + SERENITY_VERSION
+    compile 'net.serenity-bdd:serenity-rest-assured:' + SERENITY_VERSION
     compile 'net.serenity-bdd:serenity-screenplay-webdriver:' + SERENITY_VERSION
     compile 'net.serenity-bdd:browse-the-web:1.1.34'
     testCompile 'net.serenity-bdd:serenity-junit:' + SERENITY_VERSION
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    compile 'org.codehaus.groovy:groovy-json:2.0.0-rc-4'
+
 }
 
 test {
